# panda-eye

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
Application/: CMakeLists.txt
Application/source/: app.cpp
Control/: CMakeLists.txt
Control/include/: main_controller.hpp
Control/source/: main_controller.cpp
Core/: CMakeLists.txt
Core/include/: image.hpp  media.hpp  media_cache.hpp  media_item_model.hpp  utils.hpp  video.hpp
Core/source/: image.cpp  media.cpp  media_cache.cpp  media_item_model.cpp  utils.cpp  video.cpp
ImgProcess/: CMakeLists.txt
InferenceMotor/: CMakeLists.txt
View/: CMakeLists.txt
View/forms/: exploring_widget.ui  image_view_widget.ui  main_window.ui
View/include/: exploring_widget.hpp  image_view_widget.hpp  main_window.hpp
View/source/: exploring_widget.cpp  image_view_widget.cpp  main_window.cpp
